infrastructure/k8s/istio/account-service-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account-service
  namespace: mbd
spec:
  hosts:
    - "*"
  gateways:
    - mbd/mbd-gateway
  http:
    - match:
        - uri:
            prefix: /api/accounts
      route:
        - destination:
            host: account-service
            port:
              number: 8080
