infrastructure/k8s/istio/customer-frontend-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: z-customer-frontend
  namespace: mbd
spec:
  hosts:
    - "customer.mbd.local"
  gateways:
    - mbd/mbd-gateway
  http:
    - route:
        - destination:
            host: customer-frontend
            port:
              number: 80
