infrastructure/k8s/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: mbd-internal-and-cross
  namespace: mbd
spec:
  host: "*.mbd.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: postgresql-cross-rule
  namespace: mbd
spec:
  host: postgresql.mbd-infra.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: mbd-infra-internal
  namespace: mbd-infra
spec:
  host: "*.mbd-infra.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
