infrastructure/k8s/istio/portfolio-service-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: portfolio-service
  namespace: mbd
spec:
  hosts:
    - "customer.mbd.local"
    - "admin.mbd.local"
  gateways:
    - mbd/mbd-gateway
  http:
    - match:
        - uri:
            prefix: /api/portfolio
      corsPolicy:
        allowOrigins:
          - exact: https://customer.mbd.local
          - exact: https://admin.mbd.local
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - DELETE
        allowHeaders:
          - "*"
        maxAge: 24h
      route:
        - destination:
            host: portfolio-service
            port:
              number: 8080
